[metadata]
name = pyxkiss
version = attr: pyxkiss.__version__
description = Comprehensive KISS/XKISS/SMACK library for amateur radio TNCs
long_description = file: README.md
long_description_content_type = text/markdown
author = Kris Kirby
author_email = ke4ahr@gmail.com
license = LGPL-3.0-or-later
url = https://github.com/ke4ahr/PyXKISS
project_urls =
    Bug Tracker = https://github.com/ke4ahr/PyXKISS/issues
    Documentation = https://pyxkiss.readthedocs.io/
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Communications :: Ham Radio

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pyserial>=3.5
    pyax25-22>=0.5.97; extra == 'ax25'

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=4.0
    pytest-mock>=3.0
    black
    flake8
    mypy
    sphinx
    sphinx-rtd-theme

test =
    pytest>=7.0
    pytest-cov>=4.0
    pytest-mock>=3.0

[options.entry_points]
console_scripts =
    pyxkiss = pyxkiss.__main__:main

[tool:pytest]
minversion = 7.0
addopts = --cov=pyxkiss --cov-report=term-missing --cov-report=html --cov-fail-under=90
testpaths = tests

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist

[mypy]
python_version = 3.8
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[egg_info]
tag_build =
tag_date = 0
